--- a/main.css
+++ b/main.css
@@ -229,6 +229,7 @@ a:hover {
     font-family: 'Lato', sans-serif;
     /* font-family: 'Zigzag', sans-serif; */
     font-size: 100px;
+    user-select: none;
 }
 
 .clock p.separator,
@@ -360,6 +361,7 @@ a:hover,
     background: transparent;
     font-style: normal;
     display: none;
+    user-select: none;
 }
 button.control-btn {
     position: absolute;
